# lektor-tailwind

./: .gitignore  MANIFEST.in  README.md  lektor_tailwind.py  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yaml  testing.yaml
example/_build/: index.html
example/_build/.lektor/: buildstate
example/_build/about/: index.html
example/_build/blog/: index.html
example/_build/blog/first-post/: index.html
example/_build/blog/hello-world/: index.html
example/_build/projects/: index.html
example/_build/static/: style.css
example/content/blog/first-post/: contents.lr
example/content/blog/hello-world/: contents.lr
tests/: run_test.sh  test_plugin.py
tests/example/: .gitignore  example.lektorproject  tailwind.config.js
tests/example/content/: contents.lr
tests/example/templates/: layout.html
