[metadata]
name = lektor-tailwind
version = attr: lektor_tailwind.__version__
description = A Lektor plugin that adds Tailwind CSS to your project seamlessly.
license = MIT
author = Frost Ming
author_email = mianghong@gmail.com
url = https://github.com/frostming/lektor-tailwind
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Framework :: Lektor
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires = pytailwindcss>=0.1.4
python_requires = >=3.8
py_modules = lektor_tailwind
include_package_data = true

[options.entry_points]
lektor.plugins =
    tailwind = lektor_tailwind:TailwindPlugin
